# vulkane

./: CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
spock/: Cargo.toml  build.rs
spock/examples/: compile_shader.rs  compute_square.rs  device_info.rs  fill_buffer.rs  headless_triangle.rs  windowed_triangle.rs
spock/examples/shaders/: square_buffer.comp  square_buffer.spv  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
spock/src/: tests.rs
spock/src/raw/: loader.rs  result.rs
spock/src/safe/: command.rs  debug.rs  descriptor.rs  device.rs  features.rs  graphics_pipeline.rs  image.rs  instance.rs  mod.rs  naga.rs  physical.rs  pipeline.rs  query.rs  render_pass.rs  shader.rs  sync.rs
spock/src/safe/allocator/: mod.rs
spock/tests/: naga_test.rs  real_vulkan_test.rs  safe_wrapper_test.rs
vulkan_gen/: Cargo.toml
vulkan_gen/src/: lib.rs
vulkan_gen/src/codegen/: assembler.rs  mod.rs  type_integration.rs
vulkan_gen/src/codegen/generator_modules/: const_gen.rs  device_features_gen.rs  enum_gen.rs  extensions_builder_gen.rs  function_gen.rs  macros_gen.rs  mod.rs  safe_commands_gen.rs  safe_handles_gen.rs  struct_gen.rs  type_gen.rs
vulkan_gen/src/parser/: tree_parser.rs
vulkane/: Cargo.toml  README.md
vulkane/docs/: DEFRAG_FOR_ML.md
vulkane/examples/: deferred_shading.rs  external_memory_export.rs  ray_tracing_as_build.rs  shadow_map.rs  windowed_triangle.rs
vulkane/examples/shaders/: deferred_shading.wgsl  deferred_shading.wgsl.spv
vulkane/src/: lib.rs
vulkane/src/raw/: mod.rs  pnext.rs
vulkane/src/safe/: acceleration_structure.rs  auto.rs  buffer.rs  command.rs  device.rs  extensions.rs  external_semaphore.rs  features.rs  flags.rs  instance.rs  memory.rs  mod.rs  physical.rs  pipeline.rs  pnext.rs  ray_tracing_pipeline.rs  shaderc.rs  shaders.rs  surface.rs  sync.rs
vulkane/src/safe/allocator/: mod.rs
vulkane/tests/: generator_live_device_test.rs  profile_v1_conformance.rs  safe_wrapper_test.rs  shaderc_test.rs  shaders_test.rs
vulkane_derive/src/: lib.rs
