[package]
name = "spock"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Eric Evans <CireSnave@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Raw Vulkan API bindings generated entirely from the official vk.xml specification. Supports any Vulkan version from 1.2.175 onward — swap vk.xml and rebuild."
keywords = ["vulkan", "graphics", "gpu", "rendering", "ffi"]
categories = ["graphics", "api-bindings", "rendering", "external-ffi-bindings"]
readme = "../README.md"
repository = "https://github.com/ciresnave/spock"
homepage = "https://github.com/ciresnave/spock"
documentation = "https://docs.rs/spock"

[features]
default = ["build-support"]
# Build support for XML parsing and code generation during build
build-support = []
# Enable automatic download of vk.xml from the Khronos GitHub repository
# when no local copy is found. Requires network access during build.
fetch-spec = []
# Enable runtime GLSL -> SPIR-V compilation via the `naga` crate.
# Adds the `spock::safe::naga::compile_glsl` convenience function.
naga = ["dep:naga"]

[dependencies]
# Dynamic loading of the Vulkan runtime library
libloading = { workspace = true }
# Optional: GLSL -> SPIR-V compilation via Naga (the wgpu shader translator).
# Pulls in glsl-in and spv-out features only — no other backends.
naga = { version = "29", optional = true, default-features = false, features = ["glsl-in", "spv-out"] }

[build-dependencies]
vulkan_gen = { path = "../vulkan_gen" }
ureq = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
